//
// Remoting通信协议
//      2013-01-21 19:11:14 誓嘉<vintage.wang@gmail.com>草拟 V0.1
//
// 协议格式 <length> <header length> <header data> <body data>
//            1        2               3             4
// 协议分4部分，含义分别如下
//     1、大端4个字节整数，等于2、3、4长度总和
//     2、大端4个字节整数，等于3的长度
//     3、二进制Google Protobuf序列化数据
//     4、应用自定义二进制序列化数据
//
package remoting;
option optimize_for = SPEED;
option java_package = "com.alibaba.rocketmq.remoting.protocol";
option java_outer_classname = "RemotingProtos";
 
// RPC请求代码
enum RequestCode{
    DEMO_REQUEST = 0;
}

// RPC应答代码
enum ResponseCode{
    SUCCESS = 0;                        // 成功
    SYSTEM_ERROR = 1;                   // 发生了未捕获异常
    SYSTEM_BUSY = 2;                    // 由于线程池拥堵，系统繁忙
    REQUEST_CODE_NOT_SUPPORTED = 3;     // 请求代码不支持
}
 
